@@ -19,9 +19,12 @@
 
 *****************************************************************************/
 
+#include "qmidictlAbout.h"
 #include "qmidictlOptionsForm.h"
 
 #include "qmidictlOptions.h"
+
+#include <QMessageBox>
 
 
 //----------------------------------------------------------------------------
@@ -53,10 +56,22 @@ qmidictlOptionsForm::qmidictlOptionsForm (
 		m_ui.MmcDeviceSpinBox->setValue(pOptions->iMmcDevice);
 	}
 
+	// Start clean.
+	m_iDirtyCount = 0;
+
 	// Try to fix window geometry.
 	adjustSize();
 
 	// UI signal/slot connections...
+	QObject::connect(m_ui.InterfaceComboBox,
+		SIGNAL(editTextChanged(const QString&)),
+		SLOT(change()));
+	QObject::connect(m_ui.UdpPortSpinBox,
+		SIGNAL(valueChanged(int)),
+		SLOT(change()));
+	QObject::connect(m_ui.MmcDeviceSpinBox,
+		SIGNAL(valueChanged(int)),
+		SLOT(change()));
 	QObject::connect(m_ui.DialogButtonBox,
 		SIGNAL(accepted()),
 		SLOT(accept()));
@@ -66,25 +81,60 @@ qmidictlOptionsForm::qmidictlOptionsForm (
 }
 
 
+// Change settings (anything else slot).
+void qmidictlOptionsForm::change (void)
+{
+	m_iDirtyCount++;
+}
+
+
 // Accept settings (OK button slot).
 void qmidictlOptionsForm::accept (void)
 {
 	// Save options...
-	qmidictlOptions *pOptions = qmidictlOptions::getInstance();
-	if (pOptions) {
-		// Display options...
-		pOptions->sInterface = m_ui.InterfaceComboBox->currentText();
-		pOptions->iUdpPort   = m_ui.UdpPortSpinBox->value();
-		pOptions->iMmcDevice = m_ui.MmcDeviceSpinBox->value();
-		// Take care of some translatable adjustments...
-		if (pOptions->sInterface == m_sDefInterface)
-			pOptions->sInterface.clear();
-		// Save/commit to disk.
-		pOptions->saveOptions();
+	if (m_iDirtyCount > 0) {
+		qmidictlOptions *pOptions = qmidictlOptions::getInstance();
+		if (pOptions) {
+			// Display options...
+			pOptions->sInterface = m_ui.InterfaceComboBox->currentText();
+			pOptions->iUdpPort   = m_ui.UdpPortSpinBox->value();
+			pOptions->iMmcDevice = m_ui.MmcDeviceSpinBox->value();
+			// Take care of some translatable adjustments...
+			if (pOptions->sInterface == m_sDefInterface)
+				pOptions->sInterface.clear();
+			// Save/commit to disk.
+			pOptions->saveOptions();
+		}
 	}
 
 	// Just go with dialog acceptance
 	QDialog::accept();
+}
+
+
+// Reject options (Cancel button slot).
+void qmidictlOptionsForm::reject (void)
+{
+	// Check if there's any pending changes...
+	if (m_iDirtyCount > 0) {
+		switch (QMessageBox::warning(this,
+			QDialog::windowTitle(),
+			tr("Some settings have been changed.\n\n"
+			"Do you want to apply the changes?"),
+			QMessageBox::Apply |
+			QMessageBox::Discard |
+			QMessageBox::Cancel)) {
+		case QMessageBox::Discard:
+			break;
+		case QMessageBox::Apply:
+			accept();
+		default:
+			return;
+		}
+	}
+
+	// Just go with dialog rejection...
+	QDialog::reject();
 }
 
 
