@@ -31,7 +31,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QmidiCtl - Options</string>
+   <string>Options - QmidiCtl</string>
   </property>
   <property name="windowIcon">
    <iconset resource="qmidictl.qrc">
